--- a/Contact Details.html
+++ b/Contact Details.html
@@ -20,7 +20,7 @@
       <label for="">Your messege</label>
       <textarea name="Your messege" rows="10" cols="30"></textarea><br>
       <input type="submit" name=submit"" value="Submit">
-      <input type="reset" name="reset" value="rest">
+      <input type="reset" name="reset" value="reset">
     </form>
 
   </body>
